--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "history": "^4.10.1",
     "immer": "^8.0.1",
+    "jss-rtl": "^0.3.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
