--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.10.1",
     "immer": "^8.0.1",
     "jss-rtl": "^0.3.0",
+    "lodash.throttle": "^4.1.1",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
